Spacing fix

--- a/fonts.css
+++ b/fonts.css
@@ -1,3 +1,4 @@
+/* STANDARD */
 @font-face {
     font-family: Standard;
     src: url(fonts/standard/standard-book-webfont.woff);
@@ -19,6 +20,32 @@
 @font-face {
     font-family: Standard;
     src: url(fonts/standard/standard-bold-italic-webfont.woff);
+    font-weight: bold;
+    font-style: italic;
+}
+
+/* BESLEY */
+@font-face {
+    font-family: Besley;
+    src: url(fonts/besley/Besley-Book.otf);
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: Besley;
+    src: url(fonts/besley/Besley-BookItalic.otf);
+    font-weight: normal;
+    font-style: italic;
+}
+@font-face {
+    font-family: Besley;
+    src: url(fonts/besley/Besley-Bold.otf);
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: Besley;
+    src: url(fonts/besley/Besley-BoldItalic.otf);
     font-weight: bold;
     font-style: italic;
 }
