--- a/main.css
+++ b/main.css
@@ -108,9 +108,9 @@ dd {
 	margin: 0;
 	margin-top: 8px;
 	margin-bottom: 16px;
-	padding: 32px;
-	padding-top: 16px;
-	padding-bottom: 16px;
+	padding: 28px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 	box-sizing: border-box;
 	color: var(--SECTION-FG-COLOR);
 	background: var(--SECTION-BG-COLOR);
